<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".ui.auth.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradiant_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xl"
                android:layout_marginTop="64dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/auth_title_size"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/full_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginHorizontal="@dimen/margin_xl"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@drawable/launcher_btn_background"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginHorizontal="@dimen/margin_xl"
                android:layout_marginVertical="@dimen/margin_medium"
                android:background="@drawable/launcher_btn_background"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginHorizontal="@dimen/margin_xl"
                android:layout_marginVertical="@dimen/margin_medium"
                android:background="@drawable/launcher_btn_background"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/phone_edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginHorizontal="@dimen/margin_xl"
                android:layout_marginVertical="@dimen/margin_medium"
                android:background="@drawable/launcher_btn_background"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_btn"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginHorizontal="@dimen/margin_xl"
                android:layout_marginTop="48dp"
                android:background="@drawable/launcher_btn_background"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xl"
                android:text="@string/have_account"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />

            <TextView

                android:id="@+id/login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_now"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>