<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_x_small"
    android:background="#2f2f39"
    android:id="@+id/film">

    <ImageView
        android:id="@+id/film_img"
        android:layout_width="@dimen/film_img_width"
        android:layout_height="@dimen/film_img_height"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/fim_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="@dimen/margin_small"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/film_title_size"
        app:layout_constraintEnd_toEndOf="@+id/film_img"
        app:layout_constraintStart_toStartOf="@+id/film_img"
        app:layout_constraintTop_toBottomOf="@+id/film_img" />

    <ImageView
        android:id="@+id/star_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_x_small"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/fim_title_text"
        app:layout_constraintTop_toBottomOf="@id/fim_title_text"
        app:srcCompat="@drawable/ic_round_star_24"
        app:tint="#ffc107" />

    <TextView
        android:id="@+id/film_score_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"

        android:text="@string/score"
        android:textColor="@color/white"
        android:textSize="@dimen/score_size"
        app:layout_constraintBottom_toBottomOf="@id/star_img"
        app:layout_constraintEnd_toEndOf="@id/fim_title_text"
        app:layout_constraintStart_toEndOf="@id/star_img"
        app:layout_constraintTop_toTopOf="@id/star_img" />
</androidx.constraintlayout.widget.ConstraintLayout>