<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".ui.LauncherActivity">

    <ScrollView
        android:id="@+id/scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:background="@drawable/gradiant_color_background">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="360dp"
                    android:layout_height="360dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.32999998"
                    app:srcCompat="@drawable/circle_gradiant" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/margin_small"
                    app:layout_constraintBottom_toBottomOf="@id/imageView"
                    app:layout_constraintEnd_toEndOf="@id/imageView"
                    app:layout_constraintStart_toStartOf="@id/imageView"
                    app:layout_constraintTop_toTopOf="@id/imageView"
                    app:shapeAppearanceOverlay="@style/roundImageRounded"
                    app:srcCompat="@drawable/woman"
                    app:strokeWidth="1dp" />

                <TextView
                    android:id="@+id/launcher_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xl"
                    android:text="@string/intro_title"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/launcher_title_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="@id/imageView"

                    />

                <TextView
                    android:id="@+id/launcher_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launcher_subtitle"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/launcher_subtitle_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"


                    app:layout_constraintTop_toBottomOf="@id/launcher_title"

                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_gradiant_2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/launcher_btn"
                    style="@android:style/Widget.Button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
               android:layout_marginVertical="@dimen/margin_xl"
                    android:background="@drawable/launcher_btn_background"
                    android:text="@string/launcher_btn_text"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/launcher_subtitle_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"



                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>